appservices/domain/rollouts-demo-bg/rollouts-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollout-bluegreen
